Add Bootstrap gem and jquery yarn.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "RailsEdu",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.4.1"
+  },
+  "devDependencies": {}
 }
